--- a/index.html
+++ b/index.html
@@ -3,8 +3,54 @@
   <head>
     <meta charset="utf-8">
     <title>Broadway Design</title>
+    <link rel="stylesheet" href="./resources/css/style.css">
   </head>
   <body>
+
+<!-- Header -->
+    <h1>Broadway Design</h1>
+    <nav>
+      <ul>
+        <li><a href="#">Home</a></li>
+        <li><a href="#">About</a></li>
+        <li><a href="#">Work</a></li>
+        <li><a href="#">Team</a></li>
+        <li><a href="#">Contact</a></li>
+      </ul>
+    </nav>
+
+<!-- Process section -->
+    <h2>Our Process</h2>
+      <img src="./resources/identify.svg" alt="">
+        <h3>Identify</h3>
+          <p>We focus on the most important details.</p>
+
+      <img src="./resources/understand.svg" alt="">
+        <h3>Understand</h3>
+          <p>We study our projects inside and out.</p>
+
+      <img src="./resources/execute.svg" alt="">
+        <h3>Execute</h3>
+          <p>We put everything we have into our work.</p>
+
+<!-- Label section -->
+    <h2>Designed in New York</h2>
+
+<!-- Reference area -->
+    <h3>Portfolio</h3>
+      <p>Coming Soon</p>
+
+    <h3>Team</h3>
+      <p>We're Hiring!</p>
+
+    <h3>Contact</h3>
+      <p>Phone:(555)555-5555</p>
+      <p>E-mail: test@example.com</p>
+      <p>Twitter: @test</p>
+
+<!-- Footer -->
+  <p>&copyright Broadway 2016 <span>Home</span><span> About </span><span> Work </span>
+  <span> Team </span><span> Contact </span></p>
 
   </body>
 </html>
