--- a/index.html
+++ b/index.html
@@ -3,21 +3,24 @@
   <head>
     <meta charset="utf-8">
     <title>Broadway Design</title>
-    <link rel="stylesheet" href="./resources/css/style.css">
+    <link rel="stylesheet" href="./resources/css/style.css" type="text/css">
   </head>
   <body>
 
 <!-- Header -->
+  <div class="header">
     <h1>Broadway Design</h1>
-    <nav>
-      <ul>
-        <li><a href="#">Home</a></li>
-        <li><a href="#">About</a></li>
-        <li><a href="#">Work</a></li>
-        <li><a href="#">Team</a></li>
-        <li><a href="#">Contact</a></li>
-      </ul>
-    </nav>
+      <nav>
+        <ul>
+          <li><a href="#">Home</a></li>
+          <li><a href="#">About</a></li>
+          <li><a href="#">Work</a></li>
+          <li><a href="#">Team</a></li>
+          <li><a href="#">Contact</a></li>
+        </ul>
+      </nav>
+  </div>
+
 
 <!-- Process section -->
     <h2>Our Process</h2>
@@ -33,8 +36,8 @@
         <h3>Execute</h3>
           <p>We put everything we have into our work.</p>
 
-<!-- Label section -->
-    <h2>Designed in New York</h2>
+<!-- Divider section -->
+    <h2 id="divider">Designed in New York</h2>
 
 <!-- Reference area -->
     <h3>Portfolio</h3>
@@ -49,8 +52,11 @@
       <p>Twitter: @test</p>
 
 <!-- Footer -->
-  <p>&copyright Broadway 2016 <span>Home</span><span> About </span><span> Work </span>
-  <span> Team </span><span> Contact </span></p>
+  <div id="footer">
+    <p>&copy Broadway 2016 <span><a href="#">Home</a></span><span> About </span><span> Work </span>
+    <span> Team </span><span> Contact </span></p>
+  </div>
+
 
   </body>
 </html>
